[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/InfoScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/abel-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 10
use_filter = true
font_data = ExtResource( 2 )

[node name="InfoScreen" type="HBoxContainer"]
visible = false
margin_left = 387.711
margin_top = -433.965
margin_right = 526.711
margin_bottom = -353.965
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftInfo" type="VBoxContainer" parent="."]
margin_right = 67.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="World_Info_Label" type="Label" parent="LeftInfo"]
margin_right = 67.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "World Info"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World_Info_Label2" type="Label" parent="LeftInfo"]
margin_top = 42.0
margin_right = 67.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Info"
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightInfo" type="VBoxContainer" parent="."]
margin_left = 71.0
margin_right = 139.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player_Info_Label" type="Label" parent="RightInfo"]
margin_right = 68.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Info"
align = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Info_Label2" type="Label" parent="RightInfo"]
margin_top = 42.0
margin_right = 68.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Info"
align = 2
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
